# mile

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.html  README.md  README_zh.md  ck --lost-found  temp.patch  temp.txt  temp.wgsl  temp_line_numbers.txt  temp_lines.txt  temp_update_font.ps1
backup/: mui.rs  mui_build.rs
docs/: mui_rewrite_plan.md  mui_runtime_structure.md
example/: Cargo.toml
example/src/: lib.rs  showcase_animation.rs  showcase_ast_shader.rs  showcase_basic_layout.rs  showcase_float.rs  showcase_free.rs  showcase_responsive.rs  showcase_state.rs  showcase_test.rs  showcase_text.rs
lua/: container_demo.lua  drag_mul_test.lua  drag_payload_demo.lua  main.lua  mui.lua  mui_core.lua  script.lua  test_event_bus.lua  test_register.lua  test_require.lua  thread_demo.lua
markdown/: 更新心得.MD
mile_api/: Cargo.toml
mile_api/src/: event_bus.rs  global.rs  interface.rs  lib.rs  test.rs  util.rs
mile_core/: Cargo.toml
mile_core/src/: lib.rs  main.rs  run.rs  structs.rs
mile_db/: Cargo.toml
mile_db/src/: lib.rs
mile_font/: Cargo.toml
mile_font/src/: gpu_struct.rs  lib.rs  minimal_runtime.rs  structs.rs  test.rs
mile_font/src/shader/: batch_enqueue_font.wgsl  batch_enqueue_font_backup.wgsl  font.wgsl  font_layout.wgsl
mile_gpu_dsl/: Cargo.toml  README.md
mile_gpu_dsl/gpu_macro/: Cargo.toml
mile_gpu_dsl/gpu_macro/src/: lib.rs  type_hash.rs
mile_gpu_dsl/src/: core.rs  cpu_dsl.rs  dsl.rs  gpt.rs  lib.rs  pipeline.rs  render_plan.rs  structs.rs  test.rs  traits.rs
mile_gpu_dsl/src/gpu_ast_core/: gpu_ast.rs  gpu_ast_compute_pipeline.rs  gpu_program.rs  kennel.rs  mod.rs  op.rs
mile_gpu_dsl/src/mat/: gpu_ast.rs  gpu_ast_compute_pipeline.rs  gpu_program.rs  kennel.rs  mod.rs  op.rs
mile_gpu_dsl/src/program_pipeline/: manager.rs  mod.rs  render_binding.rs  render_layer.rs
mile_gpu_structs/: Cargo.toml
mile_graphics/: Cargo.toml
mile_graphics/src/: shader.wgsl  structs.rs
mile_lua/: Cargo.toml  build.rs  lua_db_codegen.rs
mile_lua/lua_types/: demo_types.lua
mile_lua/src/: db.rs  lib.rs  thread.rs  watch.rs
mile_state/: Cargo.toml
mile_state/src/: lib.rs
mile_ui/: Cargo.toml
mile_ui/src/: animtion_compute.wgsl  interaction_compute.wgsl  interaction_compute_legacy.wgsl  interaction_compute_new.wgsl  lib.rs  mile_ui_wgsl.rs  mui.rs  mui_anim.rs  mui_build.rs  mui_group.rs  mui_prototype.rs  mui_rel.rs  mui_style.rs  network_compute.wgsl  structs.rs  ui.wgsl  ui_network.rs
mile_ui/src/runtime/: _ty.rs  buffers.rs  compute.rs  entry.rs  mod.rs  panel_delta_apply.wgsl  rel.wgsl  rel.wgsl.bak  rel.wgsl.tmp  relations.rs  render.rs  snapshot_registry.rs  state.rs  ui_basic.wgsl
mile_ui/src/ui_state/: mod.rs
mile_ui/src/util/: mod.rs  texture_atlas_store.rs
styles/: README.md
