[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
mile_graphics = { path = "../mile_graphics"}
mile_ui = { path = "../mile_ui"}
mile_api = { path = "../mile_api"}
mile_font = { path = "../mile_font"}
mile_gpu_dsl = { path = "../mile_gpu_dsl"}
mile_core = { path = "../mile_core"}
mile_db = { path = "../mile_db"}
glam = "0.30.8"
