[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
mile_graphics = { path = "../mile_graphics"}
mile_ui = { path = "../mile_ui"}
mile_api = { path = "../mile_api"}
mile_font = { path = "../mile_font"}
mile_gpu_dsl = { path = "../mile_gpu_dsl"}
mile_core = { path = "../mile_core"}
mile_db = { path = "../mile_db"}
mile_lua = { path = "../mile_lua"}
serde = { version = "1", features = ["derive"] }
glam = "0.30.8"
winit = "0.30"
serde_json = "1.0.145"
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
