[package]
name = "mile_api"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26"
bytemuck = "1.24.0"
winit = "0.30"
flume = "0.11.1"
bitflags = "2.9.4"
lazy_static = "1.5.0"
dashmap = "6.1.0"
arc-swap = "1.6"
mile_db = { path = "../mile_db"}
field-offset = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
