[package]
name = "mile_core"
version = "0.1.0"
edition = "2024"

[dependencies]
mile_graphics = { path = "../mile_graphics"}
mile_ui = { path = "../mile_ui"}
mile_api = { path = "../mile_api"}
mile_font = { path = "../mile_font"}
mile_gpu_dsl = { path = "../mile_gpu_dsl"}
winit = "0.30"
rand = "0.9"  # 或者最新版本f
wgpu = "26"