[package]
name = "mile_gpu_dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
mile_graphics = { path = "../mile_graphics" }   # 引用核心逻辑
gpu_macro = { path = "./gpu_macro" }  # 指向上面创建的宏 crate
mile_api = { path = "../mile_api"}
wgpu = "26"
bytemuck = "1.24.0"
winit = "0.30"
itertools = "0.11"
bitflags = "2.9.4"
flume = "0.11.1"
image = "0.25.8"
slotmap = "1.0.7"
bevy_reflect = "0.17.2"
ndarray = "0.16.1"
