[package]
name = "mile_lua"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize", "send"] }
mile_ui = { path = "../mile_ui" }
mile_db = { path = "../mile_db" }
mile_api = { path = "../mile_api" }
serde = { version = "1", features = ["derive"] }
glam = "0.30.8"
once_cell = "1"
serde_json = "1"
notify = "6"
mile_font = { path = "../mile_font" }
mile_gpu_dsl = { path = "../mile_gpu_dsl" }
