[package]
name = "mile_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
mile_graphics = { path = "../mile_graphics" }   # 引用核心逻辑
wgpu = "26"
bytemuck = "1.24.0"
winit = "0.30"
glam = "0.30.8"
itertools = "0.11"
bitflags = "2.9.4"
flume = "0.11.1"
image = "0.25.8"
slotmap = "1.0.7"
mile_api = { path = "../mile_api" }   # 引用核心逻辑
mile_gpu_dsl = { path = "../mile_gpu_dsl" }   # 引用核心逻辑
mile_db = { path = "../mile_db" }
serde = { version = "1", features = ["derive"] }
field-offset = "0.3"
serde_json = "1.0.145"
once_cell = "1.20"
mile_font = { path = "../mile_font" }
